package compiler.domain.abstractSyntaxTree;

public abstract class BasicExpressionNode extends ComposedExpressionNode {
}
